--- a/index.html
+++ b/index.html
@@ -3,22 +3,47 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Challenge Hardware Trading</title>
-<link rel="icon" href="">
-<link rel="shortcut icon" href="">
-
-<meta name="description" content=""/>
-<meta itemprop="name" content=""/>
-<meta itemprop="description" content=""/>
-<meta itemprop="url" content=""/>
-<link rel="canonical" href=""/>
+<!-- Basic -->
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<!-- Mobile Metas -->
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<!-- Site Metas -->
+<meta name="description" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products."/>
+<meta itemprop="name" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products."/>
+<meta itemprop="description" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products."/>
+<meta itemprop="url" content="https://challengehardwaretrading.com/"/>
+<link rel="canonical" href="https://challengehardwaretrading.com/"/>
 <!-- Open Graph data -->
-<meta property="og:title" content="" />
+<meta property="og:title" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content=""/>
-<meta property="og:image" content=""/>
-<meta property="og:site_name" content=""/>
-<meta property="og:description" content=""/>
+<meta property="og:url" content="https://challengehardwaretrading.com/"/>
+<meta property="og:image" content="https://challengehardwaretrading.com/"/>
+<meta property="og:site_name" content="https://challengehardwaretrading.com/"/>
+<meta property="og:description" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products."/>
+<title>Challenge Hardware Trading</title>
+<link rel="icon" href="cht-rbg.png">
+<link rel="shortcut icon" href="cht-rbg.png">
+
+<link rel="apple-touch-icon" sizes="57x57" href="img/logo/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/logo/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/logo/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/logo/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/logo/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/logo/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/logo/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/logo/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/logo/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="img/logo/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/logo/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/logo/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon-16x16.png">
+<link rel="manifest" href="img/logo/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="img/logo/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
+
 
 </head>
 <frameset rows="*,0" frameborder="no" border="0" framespacing="0">
