--- a/about.html
+++ b/about.html
@@ -2,17 +2,37 @@
 <html>
 
 <head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+ <!-- Basic -->
+ <meta charset="utf-8" />
+ <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+ <!-- Mobile Metas -->
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+ <!-- Site Metas -->
+ <meta name="keywords" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products." />
+ <meta name="description" content="Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products." />
+ <meta name="author" content="https://challengehardwaretrading.com/" />
 
-  <title>Furnio</title>
+ <title>Challenge Hardware Trading</title>
+
+ <link rel="icon" href="cht-rbg.png">
+ <link rel="shortcut icon" href="cht-rbg.png">
+<link rel="apple-touch-icon" sizes="57x57" href="img/logo/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/logo/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/logo/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/logo/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/logo/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/logo/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/logo/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/logo/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/logo/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="img/logo/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/logo/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/logo/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon-16x16.png">
+<link rel="manifest" href="img/logo/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="img/logo/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
 
   <!-- bootstrap core css -->
@@ -44,7 +64,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Furnio
+              <img src="apple-icon-60x60.png">
             </span>
           </a>
           </a>
@@ -62,7 +82,7 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="furniture.html">Furnitures</a>
+                  <a class="nav-link" href="product.html">Product</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="blog.html">Blog</a>
@@ -73,17 +93,18 @@
               </ul>
             </div>
             <div class="quote_btn-container">
-              <a href="">
-                <span>
-                  Login
+              <a href="tel:+97125528031">
+                <i class="fa fa-phone" aria-hidden="true"></i> <span>
+                  025528031
                 </span>
-                <i class="fa fa-user" aria-hidden="true"></i>
+                
               </a>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
+              <a href="https://wa.me/+971581059821?text=Hello there, i would like to enquire about" target="_blank">
+                <i class="fa fa-whatsapp" aria-hidden="true"></i> <span>
+                  0581059821
+                </span>
+                
+              </a>
             </div>
           </div>
         </nav>
@@ -99,7 +120,7 @@
       <div class="row">
         <div class="col-md-5 col-lg-4">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="img/about/about-chellange.PNG" alt="">
           </div>
         </div>
         <div class="col-md-7 col-lg-8">
@@ -110,7 +131,8 @@
               </h2>
             </div>
             <p>
-              which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum </p>
+              We have Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical Items, Onshore Offshore and Oil & gas Products. We supply hand tools, air and power tools, rigging hardware and fasteners, safety equipment, decorative paint, Sanitary, Furniture Fittings and all sorts of industrial
+              oil field equipment and accessories.</p>
             <a href="">
               <span>
                 Read More
@@ -138,7 +160,7 @@
                   Visit Our Shop
                 </h5>
                 <p>
-                  Randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
+                  We have Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products.
                 </p>
               </div>
             </div>
@@ -148,7 +170,7 @@
                   Customer Service
                 </h5>
                 <p>
-                  Randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure
+                  By helping customers understand the product and answering questions about their reservations, they are sometimes seen as having a role in sales.
                 </p>
               </div>
             </div>
@@ -159,22 +181,34 @@
             Contact Us
           </h5>
           <div class="info_contact">
-            <a href="">
+            <a href="https://goo.gl/maps/bVvB5jYJrgeQkFDE7" target="_blank">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
                 Location
               </span>
             </a>
-            <a href="">
+            <a href="tel:+97125528031">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                +01 1234567890
+                +971 2 5528 031
               </span>
             </a>
-            <a href="">
+            <a href="tel:+971581059821">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span>
+                +971 58 1059 821
+              </span>
+            </a>
+            <a href="https://wa.me/+971581059821?text=Hello there, i would like to enquire about" target="_blank">
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>
+              <span>
+                +971 58 1059 821
+              </span>
+            </a>
+            <a href="mailto:sales@challengehardwaretrading.com">
               <i class="fa fa-envelope"></i>
               <span>
-                demo@gmail.com
+                sales@challengehardwaretrading.com
               </span>
             </a>
           </div>
@@ -197,13 +231,19 @@
         <div class="col-md-4 col-lg-3">
 
           <div class="social_box">
-            <a href="">
+            <a href="https://wa.me/+971581059821?text=Hello there, i would like to enquire about" target="_blank">
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/?hl=en" target="_blank">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.facebook.com/" target="_blank">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://twitter.com/" target="_blank">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://ae.linkedin.com/" target="_blank">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </div>
@@ -219,8 +259,7 @@
   <section class="container-fluid footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Challenge Hardware Trading
       </p>
     </div>
   </section>
