--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                   <a class="nav-link" href="product.html">Product</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html">Blog</a>
+                  <a class="nav-link" href="offerbrands.html">OFFER & BRANDS</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="contact.html">Contact Us</a>
