--- a/IndexMainpage.html
+++ b/IndexMainpage.html
@@ -55,6 +55,22 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+  <script>
+    var isNS = (navigator.appName == "PN") ? 1 : 0;
+    if(navigator.appName == "PN") document.captureEvents(Event.MOUSEDOWN||Event.MOUSEUP);
+    function mischandler(){
+    return false;
+    }
+    function mousehandler(e){
+    var myevent = (isNS) ? e : event;
+    var eventbutton = (isNS) ? myevent.which : myevent.button;
+    if((eventbutton==2)||(eventbutton==3)) return false;
+    }
+    document.oncontextmenu = mischandler;
+    document.onmousedown = mousehandler;
+    document.onmouseup = mousehandler;
+    </script>
+
 </head>
 
 <body>
@@ -129,6 +145,7 @@
                     <p>
                       We have Building Materials, General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments.
                     </p>
+                    <br><br><br><br>
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-7">
@@ -151,6 +168,7 @@
                     <p>
                       We have Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical, Onshore Offshore and Oil & gas Products.
                     </p>
+                    <br><br><br><br>
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-7">
@@ -173,6 +191,7 @@
                     <p>
                       We have General Hardware, Safety Products, Plumping Items, Electrical & Plumbing Equipments, Trading Items, Mechanical Items.
                     </p>
+                    <br><br><br><br>
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-7">
