--- a/IndexMainpage.html
+++ b/IndexMainpage.html
@@ -14,8 +14,8 @@
 
   <title>Challenge Hardware Trading</title>
 
-  <link rel="icon" href="cht-rbg.png">
-  <link rel="shortcut icon" href="cht-rbg.png">
+  <link rel="icon" href="cnew-rbg-p.png">
+  <link rel="shortcut icon" href="cnew-rbg-p.png">
 <link rel="apple-touch-icon" sizes="57x57" href="img/logo/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="img/logo/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/logo/apple-icon-72x72.png">
