--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
   <!-- contact section -->
   <section class="contact_section layout_padding" id="contactLink">
     <div class="map_container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3634.271724825849!2d54.50502111499325!3d24.371849084286737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x776eed0d73e52776!2zMjTCsDIyJzE4LjciTiA1NMKwMzAnMjYuMCJF!5e0!3m2!1sen!2sae!4v1648193857460!5m2!1sen!2sae" width="2000" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14539.056471742682!2d54.5020243!3d24.3547081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8684b6fb1eafda91!2sChallenge%20Hardware%20Trading%20LLC!5e0!3m2!1sen!2sae!4v1649334720256!5m2!1sen!2sae" width="2000" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="container">
       <div class="row">
@@ -317,9 +317,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <!-- custom js -->
   <script type="text/javascript" src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-  <!-- End Google Map -->
+ 
 
 </body>
 
